added buttons and things

--- a/cart/index.html
+++ b/cart/index.html
@@ -35,7 +35,10 @@
                         <td id="total" class="total" colspan="2">total</td>
                     </tr>
                 </tfoot>
+                
               </table>
+              <button id="specialButton" class="button">Place Order!!</button>
+              <a href="../index.html" ><button>Back to shop</button></a>
         </section>
     </main>
 </body>
