--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </header>
     <main>
          <h2>Welcome Adventurer! Have a look around!</h2>
+         <a href="./cart/index.html" ><button>Ready to Check Out</button></a>
         <section class="main-section">
            
            
