--- a/Admin/index.html
+++ b/Admin/index.html
@@ -10,6 +10,7 @@
     <header>Admin page</header>
     <main>
         <section>
+            <a href="../index.html"><button>back to home page</button></a>
             <h1>Admin Enter new Item</h1>
             <form>
                 <label>
@@ -28,7 +29,7 @@
                     <p>New Item description:</p><input name="description">
                 </label>
                 <label>
-                    <p>New Item :</p><input name="price">
+                    <p>New Item :</p><input name="price" type="number">
                 </label>
                 <button>Submit</button>
             </form>
@@ -38,6 +39,6 @@
 
 
     </main>
-    
+    <script type="module" src="./admin-app.js"></script>
 </body>
 </html>
