worked on some css

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         </div>
     </header>
     <main>
+        <span class="welcome">
          <h2>Welcome Adventurer! Have a look around!</h2>
          <a href="./cart/index.html" ><button>Ready to Check Out</button></a>
-        <section class="main-section">
+        </span>
+         <section>
            
            
             <ul id="lists">
